name:                bv
version:             0.1.0.0
cabal-version:       >= 1.12
build-type:          Simple

executable bvi
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2
  main-is:             Interpreter.hs
  other-modules:

  build-depends:       base       == 4.6.*
                     , bytestring == 0.10.*
                     , attoparsec == 0.10.4.*
                     , bv

executable bvgen
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2
  main-is:             Generator.hs
  other-modules:

  build-depends:       base                 == 4.6.*
                     , unordered-containers == 0.2.*
                     , vector               == 0.10.*
                     , hashable             == 1.2.*
                     , random               == 1.0.*
                     , bv

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2
  exposed-modules:
      Language.BV.Types
    , Language.BV.Eval
    , Language.BV.Util
    , Language.BV.Parser
    , Language.BV.Gen
    , Language.BV.Simplifier
    , Language.BV.Symbolic.SEval
    , Language.BV.Symbolic.Types

  build-depends:       base       == 4.6.*
                     , bytestring == 0.10.*
                     , attoparsec == 0.10.4.*
                     , containers == 0.5.*
